<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/sqliteroomlogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/img_logo"
        style="@style/ImageStyle"
        app:srcCompat="@drawable/swayam_logo"
        android:contentDescription="@string/swayam_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:errorEnabled="true"
       >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
           style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/reg_email"
             android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:errorEnabled="true"
       >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/reg_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:keepScreenOn="false"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:text="@string/login_submit" />

    <TextView
        android:id="@+id/txtNewUser"
        android:text="@string/newuser"
        android:textColor="@android:color/black"
        style="@style/TextViewStyle"
        android:layout_margin="7dp"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/txtForgotPass"
        android:text="@string/forgotpassword"
        android:textColor="@android:color/black"
        style="@style/TextViewStyle"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="7dp"
        android:layout_gravity="end"
        />



</LinearLayout>