...
    <string name="reg_submit">Submit</string>
    <string name="login_submit">Login</string>
    <string name="user_reigistered_success">User Registered Successfully</string>

    <!--Strings related to validations -->
    <string name="empty_username">please Enter UserName</string>
    <string name="empty_email">please Enter Email</string>
    <string name="empty_mobile_num">please Enter MobileNumber</string>
    <string name="empty_password">please Enter Password</string>
    <string name="empty_confpassword">please Enter Confirm Password</string>
    <string name="check_passwords">Passwords do not match</string>
    <string name="validation_email">Please enter valid Email id</string>
    <string name="validation_mobilenum">Mobile number should be minimum 10 digits</string>
...
