<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserName"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/ic_username"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/reg_username"
            android:inputType="textCapSentences|textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
       android:id="@+id/TextInputMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etMobileNum"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/ic_mobilenum"
            android:drawableStart="@drawable/ic_mobilenum"
            android:hint="@string/reg_mobile_num"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
       android:id="@+id/TextInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/reg_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etConfPassword"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/reg_confirm_pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/ButtonStyle"
        android:layout_margin="10dp"
        android:text="@string/reg_submit" />

    <TextView
        android:id="@+id/txtExistingAccount"
        style="@style/TextViewStyle"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/account"
        android:textColor="@android:color/black"
        />


</LinearLayout>