<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_profile"
              android:title="@string/navigation_profile"
            android:icon="@drawable/ic_username"
            />

        <item android:id="@+id/nav_chng_pass"
            android:title="@string/navigation_change_password"
            android:icon="@drawable/ic_password"/>

        <item
            android:id="@+id/nav_users_list"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:title="@string/navigation_users_list"
            />

        <item
            android:id="@+id/nav_about"
            android:title="@string/navigation_about"
            android:icon="@drawable/ic_info_white_24dp"/>

        <item
            android:id="@+id/nav_signout"
            android:title="@string/navigation_signout"
            android:icon="@drawable/ic_input_white_24dp"/>
    </group>

</menu>